fix: Align center

--- a/docs/_sass/modules/basicSection.scss
+++ b/docs/_sass/modules/basicSection.scss
@@ -13,6 +13,7 @@
     font-size: 24px;
     line-height: 24px * 1.2;
     font-weight: bold;
+    text-align: center;
   }
 
   .basicSection__headerTitleInner {
